# retroscope

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac
data/: Makefile.am  retroscope.desktop.in  viewport.json
data/pixmaps/: Makefile.am
po/: POTFILES.in
src/: Makefile.am  retroscope.vala
src/vapi/: config.vapi
tools/: indent.sh
